# example-player-fuzzing

./: 01_fuzzy_athlete_name_matching.py  02_fuzzy_athlete_tests.py  03_fuzzy_athlete_hybrid.py  04_fuzzy_athlete_with_team.py  README.md  pseudocode.py  pyproject.toml
