[project]
name = "fuzzy-matching"
version = "0.1.0"
description = ""
authors = [
    {name = "John Larkin",email = "john.larkin@mojo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rapidfuzz (>=3.12.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
